# cursor-agent-architecture

./: .gitignore  ARTIFACTS_INDEX.md  LATEST_FINDINGS.md  README.md  all-grpc-rpcs.txt  ansible-README.md  anyos-setup.sh  anyos.conf  bundled-fonts-list.txt  ecr-computer-use-config.json  ecr-default-config.json  ecr-tags.json  index.html  protobuf-dashboard-billing-classes.txt  protobuf-enums-and-schemas.txt
ansible/: README.md  vnc-desktop.yml
ansible/files/: anyos.hidpi.conf
ansible/files/polished-renderer/: Cargo.toml
ansible/files/polished-renderer/src/: error.rs
ansible/files/polished-renderer/src/compositor/: cpu.rs  i420_frame.rs
ansible/files/polished-renderer/src/scheduler/: mod.rs
ansible/files/polished-renderer/src/video/: verify.rs
artifacts/ecr/: ecr-browser-use-config.json
artifacts/protocol/: aiserver-api-catalog.txt  all-protobuf-enums.txt  dashboard-service-rpcs.txt
artifacts/runtime/: cursorvm-manager-domains.txt  network-topology.txt
artifacts/security/: cursorsandbox-help.txt
binary-analysis/: cursorsandbox-analysis.txt  polished-renderer-analysis.txt
computer-use-image/: start-chrome.sh  start-x11vnc.sh  supervisord.conf
docs/: ARCHITECTURE_REFERENCE.md  KEY_FINDINGS.md  README.md  SESSION_WAVE_NOTES.md
exec-daemon-code/: agent-loop-protocol.txt  bugbot-and-integrations.txt  builtin-tools.txt  claude-to-cursor-mapping.js  client-side-tools-v2-calls.txt  client-side-tools-v2.txt  computer-use-enums.txt  computer-use-implementation.txt  connect-rpc-services.txt  enterprise-and-billing.txt  live-request-context.json  mcp-and-plugins.txt  protobuf-messages.txt  sandbox-and-security-deep.txt  secret-scanner-hooks.txt  security-and-sandbox.txt  skill-prompt-CREATING_SKILLS_CONTENT.txt  skill-prompt-MIGRATE_TO_SKILLS_CONTENT.txt  stream-unified-chat-request.txt  tool-execution-hooks.txt
exec-daemon-meta/: 953.index.js
extracted/: README.md  ansible-README.md  credential-flow-analysis.txt  docker-in-docker-inspection.json  pod-daemon-config-strings.txt  pod-daemon-service.txt  protobuf-agent-v1-types.txt  s3-access-verdict.txt  s3-probe-results.txt
extracted/binary-analysis/: isod-analysis.txt  pod-daemon-analysis.txt
extracted/exec-daemon-code/: agent-modes-and-models.txt  credential-providers.txt  (+10 more)
polished-renderer/: polished-renderer-config.rs  polished-renderer-proxy.rs
polished-renderer/polished-renderer/: BUILD.bazel
polished-renderer/polished-renderer/src/: bench.rs  main.rs
polished-renderer/polished-renderer/src/compositor/: frame.rs
polished-renderer/polished-renderer/src/compositor/effects/: keystrokes.rs
polished-renderer/polished-renderer/src/plan/: types.rs
polished-renderer/polished-renderer/src/scheduler/: frame_scheduler.rs
polished-renderer/polished-renderer/src/video/: encoder.rs
scripts/: fetch_and_refresh.sh  refresh_findings.py
system/: docker-history.txt  opt-files.txt  packages.txt  tools-versions.txt
(+28 files in other folders)
