[package]
name = "polished-renderer"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ffmpeg-next = { version = "8.0", features = ["format", "codec", "software-scaling"] }
rayon = "1.10"
crossbeam-channel = "0.5"
font-kit = "0.14"
fontdue = "0.9"
resvg = { version = "0.44", default-features = false }
tiny-skia = "0.11"
usvg = "0.44"
